[ElementVisibilityObserver] Fix regression with default threshold

https://codereview.chromium.org/2830713003 (r468137,
bb7328193e3ce34bf1294153cf09d2cded966405 [formerly 913ee5fe4cfcc42ebc568965169258bc37fb0237]) changed the default threshold
of ElementVisibilityObserver from std::numeric_limits<float>::min() to
zero, assuming that they would behave the same.

It turns out that there's some confusion here - see
https://github.com/WICG/IntersectionObserver/issues/164 - and for now
we should continue to use std::numeric_limits<float>::min() to
distinguish between completely hidden and partially visible.

BUG=726839

Review-Url: https://codereview.chromium.org/2919543002
Cr-Commit-Position: refs/heads/master@{#476265}

Former-commit-id: 945f4bf50cac68aee482fa5165c3a43379ed2241